--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ packages/
 /Application/obj/Debug
 /Application/bin/Debug
 /.vs
+/Button/obj/Debug
+/Application/obj/Release
+/Button/obj/Release
+Button/bin/
