--- a/Button/Button.csproj
+++ b/Button/Button.csproj
@@ -1,23 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.props" Condition="Exists('..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.props')" />
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0A49FA94-B0A2-43C0-A0AF-7D8C67562685}</ProjectGuid>
+    <ProjectGuid>{855CC543-837F-4CB2-85A9-68EC8570A1C2}</ProjectGuid>
     <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Button</RootNamespace>
     <AssemblyName>Button</AssemblyName>
-    <TargetFrameworkIdentifier>TinyCLR</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NoStdLib>true</NoStdLib>
+    <AddAdditionalExplicitAssemblyReferences>false</AddAdditionalExplicitAssemblyReferences>
     <ProjectTypeGuids>{A1948822-69DD-4150-919B-F3F42EFB71CC};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +25,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,23 +37,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Core.0.2.0\lib\net452\GHIElectronics.TinyCLR.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.2.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.1.0.0, Culture=neutral">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Core.0.1.0\lib\tinyclr10\GHIElectronics.TinyCLR.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.1.0.0, Culture=neutral">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.1.0\lib\tinyclr10\GHIElectronics.TinyCLR.Devices.dll</HintPath>
-    </Reference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.props'))" />
-    <Error Condition="!Exists('..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.targets'))" />
-  </Target>
-  <Import Project="..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.targets" Condition="Exists('..\packages\GHIElectronics.TinyCLR.MsBuild.0.1.0\build\tinyclr10\GHIElectronics.TinyCLR.MsBuild.targets')" />
 </Project>
