--- a/Button/packages.config
+++ b/Button/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GHIElectronics.TinyCLR.Core" version="0.1.0" targetFramework="tinyclr10" />
-  <package id="GHIElectronics.TinyCLR.Devices" version="0.1.0" targetFramework="tinyclr10" />
-  <package id="GHIElectronics.TinyCLR.MsBuild" version="0.1.0" targetFramework="tinyclr10" />
+  <package id="GHIElectronics.TinyCLR.Core" version="0.2.0" targetFramework="net452" />
+  <package id="GHIElectronics.TinyCLR.Devices" version="0.2.0" targetFramework="net452" />
+  <package id="GHIElectronics.TinyCLR.Pins" version="0.2.0" targetFramework="net452" />
 </packages>
