--- a/Application/TinyClrCore.csproj
+++ b/Application/TinyClrCore.csproj
@@ -41,6 +41,9 @@
     <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GHIElectronics.TinyCLR.Core.0.2.0\lib\net452\GHIElectronics.TinyCLR.Core.dll</HintPath>
     </Reference>
+    <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.2.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
