--- a/TestG400S/TestG400S.csproj
+++ b/TestG400S/TestG400S.csproj
@@ -4,18 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{54548267-2CFB-410E-952F-E5312FFE6633}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TinyClrCore</RootNamespace>
-    <AssemblyName>TinyClrCore</AssemblyName>
+    <ProjectGuid>{A51F39E9-74D9-421F-BEE0-9D55CC059871}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>TestG400S</RootNamespace>
+    <AssemblyName>TestG400S</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NoStdLib>true</NoStdLib>
     <AddAdditionalExplicitAssemblyReferences>false</AddAdditionalExplicitAssemblyReferences>
     <ProjectTypeGuids>{A1948822-69DD-4150-919B-F3F42EFB71CC};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,20 +35,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Application.cs" />
-    <Compile Include="I2cScanner.cs" />
+    <Compile Include="MyG400SApp.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GHIElectronics.TinyCLR.Core.0.3.0\lib\net452\GHIElectronics.TinyCLR.Core.dll</HintPath>
     </Reference>
-    <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.3.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
+    <Reference Include="GHIElectronics.TinyCLR.Pins, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Pins.0.3.0\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Application\TinyClrCore.csproj">
+      <Project>{54548267-2CFB-410E-952F-E5312FFE6633}</Project>
+      <Name>TinyClrCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Button\Button.csproj">
+      <Project>{855CC543-837F-4CB2-85A9-68EC8570A1C2}</Project>
+      <Name>Button</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LedStrip\LedStrip.csproj">
+      <Project>{14D35EFA-5F56-4ADE-A025-99E421BCB1F0}</Project>
+      <Name>LedStrip</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Led\Led.csproj">
+      <Project>{6902F73C-429F-467D-8543-DD25A4EC78FB}</Project>
+      <Name>Led</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tone\Tunes.csproj">
+      <Project>{704B1259-8A83-4F6B-AA9B-7396C1D3258F}</Project>
+      <Name>Tunes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
