--- a/Tone/Tunes.csproj
+++ b/Tone/Tunes.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{54548267-2CFB-410E-952F-E5312FFE6633}</ProjectGuid>
+    <ProjectGuid>{704B1259-8A83-4F6B-AA9B-7396C1D3258F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TinyClrCore</RootNamespace>
-    <AssemblyName>TinyClrCore</AssemblyName>
+    <RootNamespace>Tone</RootNamespace>
+    <AssemblyName>Tone</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NoStdLib>true</NoStdLib>
@@ -33,8 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Application.cs" />
-    <Compile Include="I2cScanner.cs" />
+    <Compile Include="Tone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
