Réorganisation de la solution

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,6 @@
 *.suo
-Example/obj/
-Led/bin/
-Example/bin/
-Led/obj/
-packages/
 *.user
-/Application/obj/Debug
-/Application/bin/Debug
-/.vs
-/Button/obj/Debug
-/Application/obj/Release
-/Button/obj/Release
-Button/bin/
-/LedStrip/bin/Debug
-/LedStrip/bin/Debug
-/LedStrip/obj/Debug
-/Tone/bin/Debug
-/Tone/obj/Debug
-/LedStrip/obj/Release
-/Tone/obj/Release
-/LedStrip/bin/Release
-/Tone/bin/Release
-/Application/bin/Release
-/Application/bin/Release
-/LedStrip/bin/Release
-/Tone/bin/Release
-/TestG400S/bin
-/TestG400S/obj
-/TestG80/bin
-/TestG80/obj
-I2cGroveColor/bin/
-I2cGroveColor/obj/
+/.vs/
+/packages/
+bin/
+obj/
