--- a/Modules/Grove/I2cGroveColor/I2cGroveColor.csproj
+++ b/Modules/Grove/I2cGroveColor/I2cGroveColor.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Compile Include="I2cGroveColor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Register.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
