--- a/Tests/TestG400S/TestG400S.csproj
+++ b/Tests/TestG400S/TestG400S.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Application\Application.csproj">
       <Project>{54548267-2CFB-410E-952F-E5312FFE6633}</Project>
-      <Name>TinyClrCore</Name>
+      <Name>Application</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Core\Button\Button.csproj">
       <Project>{855CC543-837F-4CB2-85A9-68EC8570A1C2}</Project>
@@ -63,13 +63,13 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Core, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Core.0.4.0\lib\net452\GHIElectronics.TinyCLR.Core.dll</HintPath>
+      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Core.0.4.0\lib\net452\GHIElectronics.TinyCLR.Core.dll</HintPath>
     </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.4.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
+      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.4.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Pins, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GHIElectronics.TinyCLR.Pins.0.4.0\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
+      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Pins.0.4.0\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
