--- a/Modules/Click/BlepClick/BlepClick.csproj
+++ b/Modules/Click/BlepClick/BlepClick.csproj
@@ -34,6 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BlepModule.cs" />
+    <Compile Include="Commands\AciOpCode.cs" />
+    <Compile Include="Events\AciEvent.cs" />
+    <Compile Include="Events\AciEventType.cs" />
+    <Compile Include="Events\DataReceivedEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpiLsb.cs" />
     <Compile Include="State.cs" />
