--- a/Modules/Click/BlepClick/BlepClick.csproj
+++ b/Modules/Click/BlepClick/BlepClick.csproj
@@ -34,10 +34,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BlepModule.cs" />
+    <Compile Include="ByteArrayExtension.cs" />
     <Compile Include="Commands\AciOpCode.cs" />
+    <Compile Include="Commands\BondStatusCode.cs" />
     <Compile Include="Events\AciEvent.cs" />
     <Compile Include="Events\AciEventType.cs" />
+    <Compile Include="Events\BondStatusEvent.cs" />
+    <Compile Include="Events\CommandResponseEvent.cs" />
+    <Compile Include="Events\DataCreditEvent.cs" />
     <Compile Include="Events\DataReceivedEvent.cs" />
+    <Compile Include="Events\DeviceStartedEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpiLsb.cs" />
     <Compile Include="State.cs" />
