--- a/Modules/Modules/Modules.csproj
+++ b/Modules/Modules/Modules.csproj
@@ -4,13 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BEFC825A-9421-4DAF-9B70-DAF88131EE97}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TestBrainPad</RootNamespace>
-    <AssemblyName>TestBrainPad</AssemblyName>
+    <ProjectGuid>{55378620-50BD-4002-A8FB-FA61D991097E}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Modules</RootNamespace>
+    <AssemblyName>Modules</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NoStdLib>true</NoStdLib>
     <AddAdditionalExplicitAssemblyReferences>false</AddAdditionalExplicitAssemblyReferences>
     <ProjectTypeGuids>{A1948822-69DD-4150-919B-F3F42EFB71CC};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -18,7 +18,6 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -28,7 +27,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -37,29 +35,53 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Startup.cs" />
+    <Compile Include="Gadgeteer\LedStrip.cs" />
+    <Compile Include="Gadgeteer\Tone.cs" />
+    <Compile Include="Grove\Button.cs" />
+    <Compile Include="Grove\Buzzer.cs" />
+    <Compile Include="Grove\FourDigitDisplay.cs" />
+    <Compile Include="Grove\I2cGroveColor.cs" />
+    <Compile Include="Grove\LcdRgbBacklight.cs" />
+    <Compile Include="Grove\LedSocket.cs" />
+    <Compile Include="Grove\LightSensor.cs" />
+    <Compile Include="Grove\Register.cs" />
+    <Compile Include="Grove\Transaction.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\BlepModule.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\ByteArrayExtension.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Commands\AciOpCode.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Commands\BondStatusCode.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\AciEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\AciEventType.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\BondStatusEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\CommandResponseEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\DataCreditEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\DataReceivedEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\Events\DeviceStartedEvent.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\SpiLsb.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\State.cs" />
+    <Compile Include="Mikro Click\Bluetooth LE Module\StatusCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Grove\Relay.cs" />
+    <Compile Include="Grove\RotaryAngleSensor.cs" />
+    <Compile Include="Grove\Rtc.cs" />
+    <Compile Include="Grove\ServoMotor.cs" />
+    <Compile Include="Grove\SoundSensor.cs" />
+    <Compile Include="Grove\TemperatureSensor.cs" />
+    <Compile Include="Grove\TouchSensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="GHIElectronics.TinyCLR.BrainPad, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\GHIElectronics.TinyCLR.BrainPad.0.5.0\lib\net452\GHIElectronics.TinyCLR.BrainPad.dll</HintPath>
-    </Reference>
+    <Folder Include="Adafruit\" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.5.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
-    <Reference Include="GHIElectronics.TinyCLR.Pins, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Pins.0.5.0\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
+    <Reference Include="GHIElectronics.TinyCLR.Drawing, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Drawing.0.5.0\lib\net452\GHIElectronics.TinyCLR.Drawing.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Modules\Modules\Modules.csproj">
-      <Project>{55378620-50BD-4002-A8FB-FA61D991097E}</Project>
-      <Name>Modules</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets" Condition="Exists('..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" />
