--- a/Modules/Modules/Modules.csproj
+++ b/Modules/Modules/Modules.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Adafruit\ColorSensor1334.cs" />
     <Compile Include="Gadgeteer\LedStrip.cs" />
     <Compile Include="Gadgeteer\Tone.cs" />
     <Compile Include="Grove\Button.cs" />
@@ -72,9 +73,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Adafruit\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.5.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
