Moving Application, Button and Led project in only one called Core

--- a/Core/Application/Core.csproj
+++ b/Core/Application/Core.csproj
@@ -36,7 +36,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="I2cScanner.cs" />
+    <Compile Include="Led.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
