--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -45,8 +45,6 @@
     <Compile Include="Grove\LcdRgbBacklight.cs" />
     <Compile Include="Grove\LedSocket.cs" />
     <Compile Include="Grove\LightSensor.cs" />
-    <Compile Include="Grove\Register.cs" />
-    <Compile Include="Grove\Transaction.cs" />
     <Compile Include="Mikro Click\Bluetooth LE Module\BlepModule.cs" />
     <Compile Include="Mikro Click\Bluetooth LE Module\ByteArrayExtension.cs" />
     <Compile Include="Mikro Click\Bluetooth LE Module\Commands\AciOpCode.cs" />
@@ -73,21 +71,20 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.5.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Devices.0.5.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Drawing, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\GHIElectronics.TinyCLR.Drawing.0.5.0\lib\net452\GHIElectronics.TinyCLR.Drawing.dll</HintPath>
+      <HintPath>..\packages\GHIElectronics.TinyCLR.Drawing.0.5.0\lib\net452\GHIElectronics.TinyCLR.Drawing.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets" Condition="Exists('..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" />
+  <Import Project="..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets" Condition="Exists('..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets'))" />
+    <Error Condition="!Exists('..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\GHIElectronics.TinyCLR.Core.0.5.0\build\net452\GHIElectronics.TinyCLR.Core.targets'))" />
   </Target>
 </Project>
