--- a/Tests/TestG120E/TestG120E.csproj
+++ b/Tests/TestG120E/TestG120E.csproj
@@ -42,17 +42,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Application\Application.csproj">
+    <ProjectReference Include="..\..\Core\Application\Core.csproj">
       <Project>{54548267-2CFB-410E-952F-E5312FFE6633}</Project>
-      <Name>Application</Name>
+      <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Core\Button\Button.csproj">
-      <Project>{855CC543-837F-4CB2-85A9-68EC8570A1C2}</Project>
-      <Name>Button</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Core\Led\Led.csproj">
-      <Project>{6902F73C-429F-467D-8543-DD25A4EC78FB}</Project>
-      <Name>Led</Name>
+    <ProjectReference Include="..\..\Modules\Modules.csproj">
+      <Project>{55378620-50BD-4002-A8FB-FA61D991097E}</Project>
+      <Name>Modules</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
