--- a/Tests/TestNetduino/TestNetduino.csproj
+++ b/Tests/TestNetduino/TestNetduino.csproj
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="MyNetduino3App.cs" />
+    <Compile Include="Netduino3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
