--- a/Modules/packages.config
+++ b/Modules/packages.config
@@ -3,4 +3,5 @@
   <package id="GHIElectronics.TinyCLR.Core" version="0.6.0" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Devices" version="0.6.0" targetFramework="net452" />
   <package id="GHIElectronics.TinyCLR.Drawing" version="0.6.0" targetFramework="net452" />
+  <package id="GHIElectronics.TinyCLR.Storage" version="0.6.0" targetFramework="net452" />
 </packages>
