Delete unused files

--- a/Tests/TestG120E/TestG120E.csproj
+++ b/Tests/TestG120E/TestG120E.csproj
@@ -58,6 +58,9 @@
     <Reference Include="Bauland.Gadgeteer.LedStrip, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Bauland.Gadgeteer.LedStrip.0.6.0\lib\net452\Bauland.Gadgeteer.LedStrip.dll</HintPath>
     </Reference>
+    <Reference Include="Bauland.Gadgeteer.Tunes, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bauland.Gadgeteer.Tunes.0.6.0\lib\net452\Bauland.Gadgeteer.Tunes.dll</HintPath>
+    </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.6.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
