[TIN-34] Improve management of Assembly Informations

--- a/Modules/Gadgeteer/Tunes/Tunes.csproj
+++ b/Modules/Gadgeteer/Tunes/Tunes.csproj
@@ -36,6 +36,9 @@
     <DocumentationFile>bin\Release\Bauland.Gadgeteer.Tunes.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Melody.cs" />
     <Compile Include="MusicNote.cs" />
     <Compile Include="Tone.cs" />
