--- a/Modules/Gadgeteer/DisplayN18/DisplayN18.csproj
+++ b/Modules/Gadgeteer/DisplayN18/DisplayN18.csproj
@@ -36,6 +36,9 @@
     <DocumentationFile>bin\Release\Bauland.Gadgeteer.DisplayN18.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Color.cs" />
     <Compile Include="DisplayN18.cs" />
     <Compile Include="Image.cs" />
