--- a/Modules/Gadgeteer/Gyro/Gyro.csproj
+++ b/Modules/Gadgeteer/Gyro/Gyro.csproj
@@ -36,6 +36,9 @@
     <DocumentationFile>bin\Release\Bauland.Gadgeteer.Gyro.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Gyro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
