--- a/Modules/Gadgeteer/Led7C/Led7C.csproj
+++ b/Modules/Gadgeteer/Led7C/Led7C.csproj
@@ -36,6 +36,9 @@
     <DocumentationFile>bin\Release\Bauland.Gadgeteer.Led7C.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Led7C.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
