--- a/Modules/Gadgeteer/LightSense/LightSense.csproj
+++ b/Modules/Gadgeteer/LightSense/LightSense.csproj
@@ -36,6 +36,9 @@
     <DocumentationFile>bin\Release\Bauland.Gadgeteer.LightSense.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="LightSense.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
