--- a/Modules/Others/HCSR04/HCSR04.csproj
+++ b/Modules/Others/HCSR04/HCSR04.csproj
@@ -36,10 +36,14 @@
     <DocumentationFile>bin\Release\Bauland.Other.HCSR04.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="HCSR04.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HCSR04.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
