[TIN-36] Add image to documentation

--- a/Modules/Grove/UltrasonicRanger/UltrasonicRanger.csproj
+++ b/Modules/Grove/UltrasonicRanger/UltrasonicRanger.csproj
@@ -52,6 +52,14 @@
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="UltrasonicRanger-Electron.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="UltrasonicRanger.html">
+      <DependentUpon>UltrasonicRanger.md</DependentUpon>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
