--- a/Modules/Others/HCSR04/HCSR04.csproj
+++ b/Modules/Others/HCSR04/HCSR04.csproj
@@ -52,6 +52,12 @@
       <HintPath>..\..\..\packages\GHIElectronics.TinyCLR.Devices.0.7.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="HC-SR04-Electron.png" />
+    <Content Include="HC-SR04.html">
+      <DependentUpon>HC-SR04.md</DependentUpon>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
