--- a/Modules/Grove/UltrasonicRanger/UltrasonicRanger.nuspec
+++ b/Modules/Grove/UltrasonicRanger/UltrasonicRanger.nuspec
@@ -16,4 +16,9 @@
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.7.0, 0.8.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <!-- Add documentation and image -->
+    <file src="UltrasonicRanger.html" target="" />
+    <file src="UltrasonicRanger-Electron.png" target="" />
+  </files>
 </package>
